# signer

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build-secp256k1.sh  build-sodium.sh
include/signer/: internal.hpp  signer.hpp
src/: signer.cpp
tests/: CMakeLists.txt  test_signer.cpp
